--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 #
 # This file contains configuration flags to customize your site
 #
+title: TELUK LAMONG CARGO DISTRIBUTION CENTER
 
 # Name of your site (displayed in the header)
 name: 
