--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@
 title: TELUK LAMONG CARGO DISTRIBUTION CENTER
 
 # Name of your site (displayed in the header)
-name: 
+name: TELUK LAMONG CARGO DISTRIBUTION CENTER
 
 
 # Short bio or description (displayed in the header)
-description: 
+description: We are TELUK LAMONG CARGO DISTRIBUTION CENTER located in East Java, Indonesia, we provide warehousing rent, best location for your logistic business.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: 
