--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ footer-links:
   googleplus: 
 disqus: 
 google_analytics: 
-url: http://www.www.teluklamongcargo.co.id
+url: http://www.teluklamongcargo.co.id
 baseurl: ''
 permalink: "/:title/"
 excerpt_separator: "<!--more-->"
